# minisearch

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build-docker.sh  config.example.toml  install.sh
.github/workflows/: build.yml  release.yml
docs/: architecture.md  gateway-setup.md  s3-gateway-setup.md
frontend/: biome.json  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx
src/: assets.rs  backend.rs  cli.rs  config.rs  error.rs  handlers.rs  indexer.rs  main.rs  search.rs  state.rs  webdav.rs
