[package]
name = "fts-everywhere"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8.11.0"
mime_guess = "2.0.5"
tantivy = "0.26.1"
clap = { version = "4", features = ["derive"] }
tantivy-jieba = "0.20.0"
url = "2.5.8"
