[package]
name = "minisearch"
version = "0.0.4"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8.11.0"
new_mime_guess = "4"
tantivy = "0.26.1"
clap = { version = "4", features = ["derive", "env"] }
tantivy-jieba = "0.20.0"
anyhow = "1"
thiserror = "2"
toml = "1.1.2"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
