[package]
name = "minisearch"
version = "0.0.15"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8.11.0"
new_mime_guess = "4"
tantivy = "0.26.1"
clap = { version = "4", features = ["derive", "env"] }
tantivy-jieba = "0.20.0"
anyhow = "1"
thiserror = "2"
toml = "1.1.2"
regex-syntax = "0.8"
chrono = "0.4"
dirs = "6"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.13", features = ["stream"] }
quick-xml = "0.40"
url = "2.5"
urlencoding = "2.1"
rand = "0.9"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
